# TTS-POC

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: eleven_labs.py  name_gen.py  playAudio.py  speechify.py
audio_cache/: cache.json
engine/: engine.py  handle_cache.py
hash/: hash.py  hash_text.py
test/: response.json
tokenizer/: sentence_tokenizer.py
